# LSE_RL

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: algo-implementer.md  calibration-engineer.md  env-builder.md  experiment-runner.md  operator-theorist.md  planner.md  plotter-analyst.md  review-triage.md  test-author.md  (+1 more)
.codex/: config.toml
docs/: phase_VII_adaptive_beta_summary.md  workflow.md
paper/: neurips_selective_temporal_credit_assignment_positioned.bib  neurips_selective_temporal_credit_assignment_positioned.pre_phaseVI.tex  neurips_selective_temporal_credit_assignment_positioned.tex  neurips_selective_temporal_credit_assignment_positioned_notes.md  phase_VII_appendix_draft.tex  phase_V_VI_empirical_section.tex
paper_update/: codex_review_prompts.md  no_update_recommendation.md
scripts/: m10_overnight_dispatch.sh  m_ac_ucb_pilot_dispatch.py  rerun_phase2_phase3.sh  run_phase2_paper_suite.sh
tasks/: M7_stage2_plan.md  M9_plan.md  adaptive_beta_experiments_coding_agent_spec.md  lessons.md  overnight_checkpoint.json  overnight_log.md  phase_VIII_autonomous_checkpoint.json  phase_VIII_autonomous_harness.md  phase_VIII_autonomous_log.jsonl  phase_VIII_overnight_addendum.md  phase_VIII_spec_patches_2026-05-01.md  phase_VIII_spec_patches_2026-05-01_v3_T11_resolution.md  phase_VII_B_strategic_learning_coding_agent_spec.md  phase_VII_clarifications.md  phase_VII_confirmation_final.md  phase_VII_overnight_2026-04-26.md  prompt_experiments_section_prune_positive_results.md  six_game_safe_TAB_harness_instructions.md  todo.md
(+21077 files in other folders)
